--- a/weightable_practice_scaffolding/app/views/users/_initial_info_modal.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/_initial_info_modal.html.erb
@@ -15,6 +15,10 @@
           <%= f.fields_for :weigh_ins, @user.weigh_ins.build do |weigh_in| %>
             <%= f.label :weight %><br>
             <%= weigh_in.text_field :weight %><br><br>
+          <%= f.label :height %>
+
+         <%= f.select :height, options_for_select(%w[4'0" 4'1" 4'2" 4'3" 4'4" 4'5" 4'6" 4'7" 4'8" 4'9" 4'10" 4'11" 4'12" 5'0" 5'1" 5'2" 5'3" 5'4" 5'5" 5'6" 5'7" 5'8" 5'9" 6'0" 6'1" 6'2" 6'3" 6'4" 6'5" 6'6" 6'7" 6'8" 6'9" 7'0"]) %>
+          
           <% end %>
         </div>
         <div class="actions">
