Add BMI calculator to controller and add to user show page

--- a/weightable_practice_scaffolding/app/views/users/show.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/show.html.erb
@@ -75,9 +75,10 @@
       </div>
     <%end%>
   </div>
-   
 
-	
+<!-- Displays user's BMI from users_controller and rounds to nearest two digit decimal place -->
+<h1>Your BMI is: <%= @bmi.round(2) %></h1>
+
   <div class="lg-col-6">  
   	<div class="panel">
       <h1>Your Weigh-Ins</h1>
