--- a/weightable_practice_scaffolding/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -93,6 +93,19 @@ button.navbar-toggle {
   margin: 40px 0 8px 0;
   background-color: white;
   padding-left: 20px;
+  &:after {
+    right: 100%;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+    border-right-color: white;
+    border-width: 10px;
+    top: 10px;
+    margin: 45px -17px 0 0
+  }
 }
 
 .yeehaws-panel {
@@ -109,6 +122,7 @@ button.navbar-toggle {
   border: 2px solid #c1bcb8;
   margin-left:2px;
   margin-right:2px;
+  
 }
 
 hr {
@@ -144,4 +158,51 @@ hr {
 
 .fa-thumbs-up {
   color: white;
+}
+
+.feed-circle {
+  width: 10px;
+  height: 10px;
+  text-transform: none;
+  font-size: 1.4em;
+  line-height: 40px;
+  position: absolute;
+  color: #fff;
+  background: #266877;
+  border-radius: 50%;
+  box-shadow: 0 0 0 2px #42b8d1;
+  text-align: center;
+  left: 83%;
+  top: 0;
+  margin: 60px 0 0 0; 
+  z-index: 1;
+}
+
+.feed-timeline {
+  width: 6px;
+  height: 48%;
+  background: #266877;
+  position: absolute;
+  left: 21.1%;
+  top: 125px;
+}
+
+.feed-timeline-caboose-3, .feed-timeline-caboose-2 {
+  width: 6px;
+  background: #266877;
+  position: absolute;
+  left: 84.3%;
+}
+
+.feed-timeline-caboose-3 {
+  height: 310px;
+  top: -242px;
+}
+.feed-timeline-caboose-2 {
+  height: 400px;
+  top: -106px;
+}
+
+.footer {
+  height: 300px !important;
 }
