--- a/weightable_practice_scaffolding/app/views/users/show.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/show.html.erb
@@ -54,7 +54,7 @@
 </div>
 
 <div class="row">
-  <div class="col-sm-8 col-md-8">
+  <div class="col-sm-7 col-md-7">
     <canvas id="myChart" width="400" height="400"></canvas>
 
     <% if @user.weigh_ins.first.created_at + 24*60*60 > Time.now %>
@@ -77,7 +77,9 @@
     <%end%>
   </div>
    
-  <div class="col-xs-8 col-xs-offset-2 col-sm-4 col-sm-offset-0 col-md-4"> 
+  <div class="col-xs-8 col-xs-offset-2 col-sm-5 col-sm-offset-0 col-md-5">
+        <div class="feed-timeline"></div>
+
     <%= render 'show_wi_feed' %> 
   </div>
 </div>
