Add record weight (lowest weigh in) to user show page

--- a/weightable_practice_scaffolding/app/views/users/show.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/show.html.erb
@@ -77,7 +77,8 @@
   </div>
 
 <!-- Displays user's BMI from users_controller and rounds to nearest two digit decimal place -->
-<h1>Your BMI is: <%= @bmi.round(2) %></h1>
+<h1>Body Mass Index (BMI): <%= @bmi.round(2) %></h1>
+<h1>Record Weight: <%= @record_weight %></h1>
 
   <div class="lg-col-6">  
   	<div class="panel">
