Resolve issue where part of timeline left blank when only the first two comment boxes were opened

--- a/weightable_practice_scaffolding/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -187,7 +187,7 @@ hr {
   top: 125px;
 }
 
-.feed-timeline-caboose-3, .feed-timeline-caboose-2 {
+.feed-timeline-caboose-1, .feed-timeline-caboose-2, .feed-timeline-caboose-3 {
   width: 6px;
   background: #266877;
   position: absolute;
@@ -198,9 +198,15 @@ hr {
   height: 310px;
   top: -242px;
 }
+
 .feed-timeline-caboose-2 {
   height: 400px;
   top: -106px;
+}
+
+.feed-timeline-caboose-1 {
+  height: 400px;
+  top: 106px;
 }
 
 .footer {
