Hide timeline and points on timeline for xs screen sizes.

--- a/weightable_practice_scaffolding/app/views/users/_show_wi_feed.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/_show_wi_feed.html.erb
@@ -11,8 +11,8 @@
     <div class="row">
       <div class="col-sm-3">
 
-        <div class="feed-circle"></div>
-        <div class="feed-timeline-caboose-<%= counter %>"></div>
+        <div class="feed-circle hidden-xs"></div>
+        <div class="feed-timeline-caboose-<%= counter %> hidden-xs"></div>
       </div>
       <div class="col-sm-9">
         <div class="profile-weigh-ins"> 
