--- a/weightable_practice_scaffolding/app/views/users/show.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/show.html.erb
@@ -78,7 +78,7 @@
   </div>
    
   <div class="col-xs-8 col-xs-offset-2 col-sm-5 col-sm-offset-0 col-md-5">
-        <div class="feed-timeline"></div>
+        <div class="feed-timeline hidden-xs"></div>
 
     <%= render 'show_wi_feed' %> 
   </div>
