--- a/weightable_practice_scaffolding/app/assets/stylesheets/application.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,11 @@
  *= require font-awesome
  */
 
+#notification-number {
+  color: #e75735;
+}
+
+
 @font-face {
     font-family: 'Dancing Script';
     src: font-url('/assets/fonts/dancingscript-regular-webfont.eot');
