Style top of profile page. Fix issue where datefield was not passing date in correct format, with a before action in controller

--- a/weightable_practice_scaffolding/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -84,160 +84,8 @@ button.navbar-toggle {
 .input-group-addon:not(:first-child):not(:last-child), .input-group-btn:not(:first-child):not(:last-child), .input-group .form-control:not(:first-child):not(:last-child) {
   border-radius: 4px 0 0 4px;
 }
-
-h1.your-weigh-ins {
-  padding-left: 20%;
-}
-
-/* Weigh-in speech bubble*/
-
-.profile-weigh-ins {
-  width: 100%;
-  margin: 0 auto;
-  border-radius: 12px;
-  border: 2px solid #dddddd;
-  margin: 40px 0 8px 0;
-  background-color: white;
-  padding-left: 20px;
-  &:before {
-    right: 100%;
-    border: solid transparent;
-    content: " ";
-    height: 0;
-    width: 0;
-    position: absolute;
-    pointer-events: none;
-    border-right-color: #dddddd;
-    border-width: 10px;
-    top: 10px;
-    margin: 45px -15px 0 0
-  }
-  &:after {
-    right: 100%;
-    border: solid transparent;
-    content: " ";
-    height: 0;
-    width: 0;
-    position: absolute;
-    pointer-events: none;
-    border-right-color: white;
-    border-width: 10px;
-    top: 10px;
-    margin: 45px -18px 0 0
-  }
-}
-
-/* Yeehaw box on Profile */
-
-.yeehaws-panel {
-  background-color: #4ec67c;
-  border: 2px solid #4ca16c;
-  border-radius: 0 !important;
-  height: 65px;
-  margin-left:2px;
-  margin-right:2px;
-  cursor: pointer;
-}
-
-
-.yeehaw-text {
-  padding: 5px;
-  margin: 0;
-  color: white;
-  &:first-child {
-    font-size:2em;
-  }
-}
-
-
-.fa-thumbs-up {
-  color: white;
-}
-
-.btn-success {
-    background-color: #4ec67c;
-    border-color: #4ca16c; 
-}
-
-/* Comments on Profile */
-
-.comments-panel {
-  background-color: #dbd7d6;
-  border: 2px solid #c1bcb8;
-  margin-left:2px;
-  margin-right:2px;
-  
-}
-
-hr {
-  margin-top:7px;
-  margin-bottom:7px;
-}
-
-.panel-body.com-panel-body {
-  padding:7px 0 0 7px;
-
-}
-
-.wi_comment_btn {
-  margin-top: -10px;
-  margin-bottom: 7px;
-  text-align: center;
-  
-}
-
-/* Timeline on Profile */
-
-.feed-timeline {
-  width: 6px;
-  height: 48%;
-  background: #228396;
-  position: absolute;
-  left: 21.1%;
-  top: 125px;
-}
-
-.feed-circle {
-  width: 10px;
-  height: 10px;
-  text-transform: none;
-  font-size: 1.4em;
-  line-height: 40px;
-  position: absolute;
-  color: #fff;
-  background: #266877;
-  border-radius: 50%;
-  box-shadow: 0 0 0 2px #42b8d1;
-  text-align: center;
-  left: 83%;
-  top: 0;
-  margin: 60px 0 0 0; 
-  z-index: 1;
-}
-
-
-.feed-timeline-caboose-1, .feed-timeline-caboose-2, .feed-timeline-caboose-3 {
-  width: 6px;
-  background: #228396;
-  position: absolute;
-  left: 84.3%;
-}
-
-.feed-timeline-caboose-1 {
-  height: 400px;
-  top: 106px;
-}
-
-.feed-timeline-caboose-2 {
-  height: 400px;
-  top: -106px;
-}
-
-.feed-timeline-caboose-3 {
-  height: 310px;
-  top: -242px;
-}
-
+ 
 .footer {
-  height: 300px !important;
+  height: 300px;
+  background-color: #283742;
 }
