--- a/weightable_practice_scaffolding/app/views/users/show.html.erb
+++ b/weightable_practice_scaffolding/app/views/users/show.html.erb
@@ -2,84 +2,61 @@
 
 <script src="Chart.js"></script>
 
-<div class="row">
-  <div class="col-lg-4">
+<div class="row profile-pad">
+<!-- Profile Pic Section --!>
+  <div class="col-xs-11 col-xs-offset-1 col-sm-4 col-sm-offset-1 col-md-3 no-horiz-pad">
     <% if @user.profile_pic_url %>
       <img class="profile-pic clearfix" src=<%= @user.profile_pic_url(:sq_medium) %> />
     <% else %>
-      <div class="no-image-wrapper">
-        <%= form_for(@user) do |f| %>
-          <% if @user.errors.any? %>
-            <div id="error_explanation">
-              <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+      <%= render "form_set_profile_pic" %>
+    <% end %>
+  </div>
 
-              <ul>
-              <% @user.errors.full_messages.each do |msg| %>
-                <li><%= msg %></li>
-              <% end %>
-              </ul>
-            </div>
-          <% end %>
+<!-- About Me Section -->
+  <div class="col-xs-10 col-xs-offset-4 col-sm-4 neg-margin about-me"> 
+    <h1 class="username"><%= @user.name.capitalize %></h1> <br>
+    <h3 class="inline-text">goal <strong><%= @user.goal %> lbs</strong></h3>
+    <a href="<%= edit_user_path(@user)%>" class="edit-goal-pad small text-muted"><%= fa_icon "pencil 2x" %> EDIT GOAL</a> <br>
+    <div class="weighin-friend-text">
+      <span><%= @user.weigh_ins.size %> weigh-ins |</span> 
+      <span class="spacing"> <%= @user.friends.size %> friends</span> 
+    </div><br>
 
-
-            <div class="field">
-
-              <%= f.label :profile_pic %><br>
-              <%= f.file_field :profile_pic, :required => true %><br><br>
-
-            </div>
-            <div class="actions">
-              <%= f.submit %>
-            </div>
-          <% end %>
-        <% end %>
-      </div>
-      <div class="col-4 col-sm-4 col-md-4 col-lg-6 about-me"> 
-      <strong>Name:</strong>
-      <%= @user.name %> <br>
-   		<span><%= @user.weigh_ins.size %> Weigh-Ins |</span> 
-      <span class="spacing"><%= @user.friends.size %> Fat Friends</span> <br>
-      <p>goal <%= @user.goal %> lbs</p>
-      <%= link_to 'Edit', edit_user_path(@user) %> |
-      <%= link_to 'Back', users_path %>
-
-      <% if @user.weigh_ins.first.created_at + 24*60*60 > Time.now %>
-        <%= button_to "Update Today's WeighIn", edit_user_weigh_in_path(@user, :id => @user.weigh_ins.last.id), method: :get%> 
-      <% else %>
-        <div id="createWeighIn" >
-          <h1>Post a weigh-in</h1>
-            <p>
-              <%= form_for [@user, @weigh_in] do |f| %>
-                <%= f.label :weight %>
-                <%= f.text_field :weight %><br />
-
-                <%= f.label :status%>
-                <%= f.text_field :status %><br />
-
-                <%= f.submit "Weigh In!" %>
-              <% end %>
-            </p>
-        </div>
-      <%end%>
-    </div>
-    <div class="col-lg-1"> 
-    </div>
+    <% if @user.weigh_ins.first.created_at + 24*60*60 > Time.now %>
+      <%= render "form_edit_weigh_in" %>
+    <% else %>
+      <%= render "form_create_weigh_in" %>
+    <%end%>
   </div>
 </div>
 
 
 <!-- END OF ROW 1 -->
 <div class="row">
-  <div class="col-10 col-xs-10 col-sm-10 col-md-10 col-lg-10">
-    <div class="progress-container">
-      <div id="progressbar">
+  <div class="col-xs-12">
+    
+    <div class="row">
+      <div class="col-xs-9 col-xs-offset-1 prog-bar-con">
+        <div class="prog-bar-base"></div>
+        <div class="prog-bar-overlay" style="width:<%= @progress %>%"></div>
       </div>
-        <p id="progress-label"><%=@progress%>% to goal! </p>
+      <div class="col-sm-2">
+        <div class="goal-date-con">
+          <h4 class="no-horiz-pad inline-text text-muted"><strong><%= @user.goal %></strong> <small>lbs</small></h4>
+          <% if current_user.goal_date %>
+            <p class='text-muted'><%= @user.goal_date.to_formatted_s(:short) %></p>
+          <% end %>
+        </div>
+      </div>
     </div>
-  </div>
-  <div class="col-2 col-xs-2 col-sm-2 col-lg-2">
-    <p><%= @user.goal %> lbs</p>
-    <p><%= @user.goal_date %></p>
+    <div class="row">
+      <div class="col-xs-4">
+      </div>  
+      <div class="col-xs-4">
+        <p id="progress-label"><strong><%=@progress.round(2)%>%</strong> to goal! </p>
+      </div>  
+      <div class="col-xs-4">
+      </div>  
   </div>
 </div>
 
@@ -91,25 +68,6 @@
       <div class="col-xs-12">
         <h1>your stats</h1>
         <canvas id="myChart" width="400" height="400"></canvas>
-
-        <% if @user.weigh_ins.first.created_at + 24*60*60 > Time.now %>
-          <%= button_to "Update Today's WeighIn", edit_user_weigh_in_path(@user, :id => @user.weigh_ins.last.id), method: :get%> 
-        <% else %>
-          <div id="createWeighIn" >
-            <h1>Post a weigh-in</h1>
-              <p>
-                <%= form_for [@user, @weigh_in] do |f| %>
-                  <%= f.label :weight %>
-                  <%= f.text_field :weight %><br />
-
-                  <%= f.label :status%>
-                  <%= f.text_field :status %><br />
-
-                  <%= f.submit "Weigh In!" %>
-                <% end %>
-              </p>
-          </div>
-        <%end%>
       </div>
     </div>
 
