--- a/weightable_practice_scaffolding/app/assets/stylesheets/alert_messages.css
+++ b/weightable_practice_scaffolding/app/assets/stylesheets/alert_messages.css
@@ -50,9 +50,9 @@
     color: #66512c; }
 
 .alert-danger {
-  background-color: #f2dede;
+  background-color: rgba(231,87,53,.75) !important;
   border-color: #ebccd1;
-  color: #a94442; }
+  color: rgba(255,255,255,.7) !important; }
   .alert-danger hr {
     border-top-color: #e4b9c0; }
   .alert-danger .alert-link {
